lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:6: error: illegal start of simple expression
			return Segment( , )
                                        ^Lander:7: error: ')' expected but '}' found.
	}
        ^