lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = 
{	
	for(i <- 0 to getSol().length-1)
	{
		if(getSol()(i).x == getSol()(i+1).x )
			return Segment( , )
	}
}
